--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -646,12 +646,12 @@ both \emph{property constraints} and \emph{class constraints} are \emph{simple c
 	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} Implementation Model}
 	\label{fig:RDF-CV-implementation-model}
 \end{figure}
-A \emph{simple constraint} holds for all individuals of their \emph{context class}.
+A \emph{simple constraint} holds for all individuals of their associated \emph{context class}.
 The \emph{minimum qualified cardinality restriction} {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person,}}
 which restricts \emph{publications} to have at least one \emph{author} which must be a \emph{person},
 is an example of a \emph{property constraint} on \emph{author}
 which holds for all individuals of the class \emph{Publication}.
-Table \ref{tab:property-constraint-cardinality-restriction} displays the mapping to the \emph{RDF-CV}.
+Table \ref{tab:property-constraint-cardinality-restriction} displays how the \emph{property constraint} is generically represented using the \emph{RDF-CV}.
 \begin{table}[H]
   \scriptsize
   \sffamily
@@ -666,7 +666,8 @@ Table \ref{tab:property-constraint-cardinality-restriction} displays the mapping
 		\end{tabular}
 \end{table}
 
-The \emph{constraining element} indicates the actual type of constraint like \emph{DL} concept and role constructors, (in)equality, and further keywords for constraint types whose constraints cannot be expressed in \emph{DL} (e.g., regular expressions and constraining facets).
+The \emph{constraining element} indicates the actual type of constraint like \emph{DL} concept and role constructors ($\sqsubseteq$, $\equiv$, $\sqcap$, $\sqcup$, $\neg$, $\exists$, $\forall$, $\geq$, $\leq$), (in)equality (=, $\ne$), and further keywords for constraint types whose constraints cannot be expressed in \emph{DL} (e.g., regular expressions and constraining facets). We provide a complete list of all constraining elements which can be used to express constraints of any constraint type \cite{BoschNolleAcarEckert2015}.
+
 In some cases, a constraint is only complete when a \emph{constraining value} is stated in addition to the \emph{constraining element}
 and \emph{simple constraints} may refer to a list of \emph{classes}.
 The \emph{constraining element} of the \emph{property constraint} {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person},} e.g.,  is the \emph{DL at-least restriction} \emph{$\geq$}, the \emph{constraining value} is \emph{1}, and
