--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -276,8 +276,8 @@ SELECT ( COUNT ( ?arg1 ) AS ?c ) WHERE \{ ?arg1 ?arg2 ?o . ?o a ?arg3 . \}
 \end{ex}
 
 The knowledge representation formalism {\em DL}, with its  well-studied theoretical properties, provides the foundational basis to express constraints in a generic way. 
-For this reason, we mapped constraint types to \emph{DL} 
-in order to determine which \emph{DL} constructs are needed to express constraint types \cite{BoschNolleAcarEckert2015}.
+For this reason, we mapped constraint types to DL 
+in order to determine which DL constructs are needed to express constraint types \cite{BoschNolleAcarEckert2015}.
 
 The main contributions of this paper are:
 (1) We provide a basic terminology and classification system for RDF constraints to lay the ground for discussions on RDF validation (Section \ref{sec:vocabulary}).
@@ -482,7 +482,7 @@ If RDF validation would assume OWA and nUNA just like OWL 2 does, validation won
 %it can be the case that a book has a single title, however, 
 %this title is not unique. 
 %In some models it is \emph{The-Adventures-of-Huckleberry-Finn}, in others it is \emph{Die-Abenteuer-des-Huckleberry-Finn}. 
-%And since in every model there is only one, \emph{DL} sentences are satisfied. 
+%And since in every model there is only one, DL sentences are satisfied. 
 %But this does not correspond to the intended constraint which is usual in CWA way.   
 %%Classical constraint languages are based on the CWA where constraints need to be satisfied only by named individuals which yields a constraint violation.
 %This ambiguity in semantics is one of the main reasons why OWL 2 has not been adopted as a standard constraint language for RDF validation in the past. 
@@ -520,10 +520,10 @@ This is also important in order to prove that semantically equivalent \emph{spec
 behave in the same way w.r.t. validation results which semantically underpins bidirectional mappings.
 
 %We defined the \textbf{formal generic semantics of the vocabulary} to describe constraints of any constraint type in a generic way (see paper appendix):
-%(1) We mapped constraint types to \emph{DL} to logically underpin them and 
+%(1) We mapped constraint types to DL to logically underpin them and 
 %(2) we described the constraint types' intended behavior in terms of validation results depending on CWA and UNA.
 %To be able to define mappings between \emph{specific constraints} (expressed by different languages) and \emph{generic constraints},
-%we show for each constraint type that a constraint expressed by a particular language leads to the same answer as the corresponding \emph{DL} query.
+%we show for each constraint type that a constraint expressed by a particular language leads to the same answer as the corresponding DL query.
 %To be able to specify transformations between \emph{specific constraints} (expressed by different languages),
 %identical semantics of the languages with regard to the particular constraint type has to be ensured.
 %%Constraint languages assume identical semantics, 
@@ -606,15 +606,15 @@ we show that constraints of any constraint type can be described generically.
 \textbf{\emph{DL Expressivity}:}
 The \emph{RDF-CV} allows to describe 
 constraints which are either \emph{expressible in DL} (64\%) or which are \emph{not expressible in DL} (36\%). Constraints which are expressible in DL are instantiated from 64\% of the overall 81 constraint types. On the other hand, constraints which are not expressible in DL are assigned to 36\% of all constraint types.
-%In case a constraint type is \emph{expressible in DL}, we determined which \emph{DL} constructs are needed to express the constraint type.
+%In case a constraint type is \emph{expressible in DL}, we determined which DL constructs are needed to express the constraint type.
 
 \textbf{\emph{Complexity}:}
 \emph{Simple constraints} (60\% of the constraint types) denotes the set of atomic constraints. 
 %which can be instantiated from almost 2/3 of the constraint types.
 \emph{Complex constraints} (26\%) is the set of constraints which are created out of \emph{simple} and/or other \emph{complex constraints}.
 %and which are instances of 1/4 of the constraint types.
-%In case \emph{complex constraints} are expressible in \emph{DL}, 
-%\emph{DL} statements representing \emph{complex constraints} contain \emph{DL} statements standing for atomic and/or composed constraints. 
+%In case \emph{complex constraints} are expressible in DL, 
+%DL statements representing \emph{complex constraints} contain DL statements standing for atomic and/or composed constraints. 
 Constraints of almost 14\% of the constraint types are \emph{complex constraints}
 which can be simplified and therefore formulated as \emph{simple constraints} when using them in terms of syntactic sugar.
 
@@ -632,7 +632,7 @@ As a consequence, the distinction of \emph{property} and \emph{class constraints
 %\tb{use RDF-CV / not: expressible in RDF-CV / RDF-CV is a vocabulary, not a language}
 
 Altogether, instances of the most of the constraint types are \emph{simple constraints on properties} which are \emph{expressible in DL}. 
-%Thus, the majority of constraint types are directly and relatively easy formulated in form of \emph{simple constraints} which can be mapped to equivalent \emph{DL} constructs.
+%Thus, the majority of constraint types are directly and relatively easy formulated in form of \emph{simple constraints} which can be mapped to equivalent DL constructs.
 
 \subsection{\emph{Simple Constraints}}
 
@@ -666,27 +666,32 @@ Table \ref{tab:property-constraint-cardinality-restriction} displays how the \em
 		\end{tabular}
 \end{table}
 
-The \emph{constraining element} indicates the actual type of constraint like \emph{DL} concept and role constructors ($\sqsubseteq$, $\equiv$, $\sqcap$, $\sqcup$, $\neg$, $\exists$, $\forall$, $\geq$, $\leq$), (in)equality (=, $\ne$), and further keywords for constraint types whose constraints cannot be expressed in \emph{DL} (e.g., regular expressions and constraining facets). We provide a complete list of all constraining elements which can be used to express constraints of any constraint type \cite{BoschNolleAcarEckert2015}.
+%The \emph{constraining element} indicates the actual type of constraint like DL concept and role constructors ($\sqsubseteq$, $\equiv$, $\sqcap$, $\sqcup$, $\neg$, $\exists$, $\forall$, $\geq$, $\leq$), (in)equality (=, $\ne$), and further keywords for constraint types whose constraints cannot be expressed in DL (e.g., regular expressions and constraining facets). 
+
+The \emph{constraining element} is an intuitive term which indicates the actual type of constraint. For the majority of the constraint types, there is exactly one constraining element. For the constraint type \emph{property domain (R-25, R-26)} which restricts the domain of properties, e.g., there is only one constraining element with exactly the same identifier \emph{property domain}. For a few constraint types, however, one constraining element is not sufficient to describe all possible constraints of a particular constraint type and therefore multiple constraining elements may be stated for these constraint types. The constraint type \emph{language tag cardinality (R-48, R-49)}, for instance, is used to restrict given data properties to have a minimum, maximum, or exact number of relationships to literals with certain language tags. Thus, three constraining elements are needed in order to be able to express each possible constraint of that comstraint type.
+
+If constraint types are expressible in DL, associated constraining elements are formally based on DL constructs like DL concept and role constructors ($\sqsubseteq$, $\equiv$, $\sqcap$, $\sqcup$, $\neg$, $\exists$, $\forall$, $\geq$, $\leq$) and (in)equality (=, $\ne$). In case, constraint types cannot be expressed in DL such as \emph{data property facets (R-46)} or \emph{literal pattern matching (R-44)}, we reuse widely used terms from SPARQL and the DCMI Metadata Terms like \emph{regex} and \emph{xsd:pattern}. For some constraint types like \emph{cardinality restrictions}, it is more intuitive to reuse the DL terms $\geq$ and $\leq$ as constraining elements instead of, for instance, \emph{minimum qualified cardinality restriction}. We provide a complete list of all constraining elements which can be used to express constraints of any constraint type \cite{BoschNolleAcarEckert2015}. 
 
 In some cases, a constraint is only complete when a \emph{constraining value} is stated in addition to the \emph{constraining element}
 and \emph{simple constraints} may refer to a list of \emph{classes}.
 The \emph{constraining element} of the \emph{property constraint} {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person},} e.g.,  is the \emph{DL at-least restriction} \emph{$\geq$}, the \emph{constraining value} is \emph{1}, and
-the list of \emph{classes} includes \emph{Person} which restricts the objects of the property \emph{author} to be of the class \emph{Person}.
+the list of \emph{classes} includes the class \emph{Person} which restricts the objects of the property \emph{author} to be persons.
+
 For \emph{property constraints}, \emph{left} and \emph{right property lists} are specified.
 The assignment of properties to these lists happens relative to the \emph{constraining element} 
-which may be an operator like $\sqsubseteq$.
+which may be a DL operator like $\sqsubseteq$.
 \emph{Object Property Paths} (\emph{R-55})
 ensure that if an individual \emph{x} is connected by a sequence of object properties with an individual \emph{y}, 
 then \emph{x} is also related to \emph{y} by a particular object property. 
-As \emph{Stephen-Hawking} is the \emph{author} of the book \emph{A-Brief-History-Of-Time} 
+As \emph{Stephen-Hawking} is the author of the book \emph{A-Brief-History-Of-Time} 
 %{\small\ms{(authorOf(Stephen-Hawking, A-Brief-History-Of-Time))}} 
-whose \emph{genre} is \emph{Popular-Science}, 
+whose genre is \emph{Popular-Science}, 
 %{\small\ms{(genre(A-Brief-History-Of-Time, Popular-Science)),}}
-the \emph{object property path} {\small\ms{authorOf $\circ$ genre $\sqsubseteq$ authorOfGenre}} infers that \emph{Stephen-Hawking} is an \emph{author} of the \emph{genre} \emph{Popular-Science}. 
+the object property path {\small\ms{authorOf $\circ$ genre $\sqsubseteq$ authorOfGenre}} infers that \emph{Stephen-Hawking} is an author of the genre \emph{Popular-Science}. 
 %{\small\ms{(authorOfGenre(Stephen-Hawking, Popular-Science))}.}
-Thus, when mapped to the \emph{RDF-CV} (Table \ref{tab:property-constraint-object-property-paths}), the properties \emph{authorOf} and \emph{genre} are placed on the left side of the \emph{constraining element} \emph{$\sqsubseteq$}
-and the property \emph{authorOfGenre} on the right side.
-As this \emph{property constraint} holds for all individuals within the data, the \emph{context class} is the \emph{DL top concept} $\top$ which stands for the super-class of all classes.
+Thus, when representing the \emph{property constraint} using the \emph{RDF-CV} (see Table \ref{tab:property-constraint-object-property-paths}), the properties \emph{authorOf} and \emph{genre} are placed on the left side of the \emph{constraining element} \emph{$\sqsubseteq$}
+and the property \emph{authorOfGenre} on its right side.
+As this \emph{property constraint} holds for all individuals within the data, the \emph{context class} is set to the \emph{DL top concept} $\top$ which stands for the super-class of all classes.
 \begin{table}[H]
   \scriptsize
   \sffamily
@@ -701,11 +706,11 @@ As this \emph{property constraint} holds for all individuals within the data, th
 		\end{tabular}
 \end{table}
 
-There are \emph{simple constraints} which are not expressible in \emph{DL} but can still be described using the \emph{RDF-CV} 
+There are \emph{simple constraints} which are not expressible in DL but can still be described using the \emph{RDF-CV} 
 such as constraints of the type \emph{literal pattern matching} (\emph{R-44}) which restrict literals to match given patterns.
 The \emph{universal restriction} {\small\ms{Book $\sqsubseteq$ $\forall$ identifier.ISBN}} ensures that \emph{books} can only have valid \emph{ISBN} identifiers, 
 i.e., strings that match a given regular expression.
-%Even though, the restriction of the datatype \emph{ISBN} cannot be expressed in \emph{DL}, \emph{OWL 2 DL} can be used to express the \emph{literal pattern matching} constraint:
+%Even though, the restriction of the datatype \emph{ISBN} cannot be expressed in DL, \emph{OWL 2 DL} can be used to express the \emph{literal pattern matching} constraint:
 %\begin{ex}
 %ISBN a RDFS:Datatype ; owl:equivalentClass [ a RDFS:Datatype ;
     %owl:onDatatype xsd:string ; 
@@ -733,13 +738,13 @@ i.e., strings that match a given regular expression.
 %\ms{Janeway commandsEnterprise Voyager} and \ms{Voyager registryNumber "NCC-74656"\textasciicircum{}\textasciicircum{}RegistryNumber}, 
 %but not for the triples \ms{Picard commandsEnterprise Enterprise} and \ms{Enterprise registryNumber "NCC-1701-E"\textasciicircum{}\textasciicircum{}RegistryNumber}.
 Table \ref{tab:simple-constraint-not-expressible-in-dl)} presents 
-how the \emph{literal pattern matching} \emph{simple constraint} which is not expressible in \emph{DL} and 
-how the \emph{universal restriction} \emph{complex constraint} which is expressible in \emph{DL} are mapped to the \emph{RDF-CV}.
+(1) how the \emph{literal pattern matching} \emph{simple constraint} which is not expressible in DL and 
+(2) how the \emph{universal restriction} \emph{complex constraint} which is expressible in DL are represented using the \emph{RDF-CV}.
 Thereby, the \emph{context class} \emph{ISBN}, whose instances must satisfy the \emph{simple constraint}, 
 is reused within the list of \emph{classes} the \emph{complex constraint} refers to.
 The \emph{literal pattern matching} constraint type introduces the \emph{constraining element} \emph{regex}
 whose validation has to be implemented once like for any other \emph{constraining element}.
-%In general, validation has to be implemented once for each \emph{generic constraint type} which is not expressible in \emph{DL}. 
+%In general, validation has to be implemented once for each \emph{generic constraint type} which is not expressible in DL. 
 %\begin{gcotable}
 %property & Enterprise & registryNumber & - & RegistryNumber & $\forall$ & - \\
 %class & RegistryNumber & - & - & xsd:string & regex & 'NCC-1701([-][A-E])?' \\
@@ -767,8 +772,8 @@ restrict individuals of given classes to have all properties of exactly one of m
 \emph{Publications}, e.g., are either identified by an \emph{ISBN} and a title (for books) or by an \emph{ISSN} and a title (for periodical \emph{publications}), but it should not be possible to assign both identifiers to a given \emph{publication}. 
 As \emph{The-Great-Gatsby} is a \emph{publication} with an \emph{ISBN} and a title without an \emph{ISSN}, 
 \emph{The-Great-Gatsby} is considered as a valid \emph{publication}.
-The \emph{complex constraint} is generically expressible by \emph{DL}:
-%This \emph{complex constraint} is expressible specifically by \emph{ShEx} and generically by \emph{DL} (and can therefore be mapped to the \emph{RDF-CV} \cite{BoschEckert2015-2}).
+The \emph{complex constraint} is generically expressible by DL:
+%This \emph{complex constraint} is expressible specifically by \emph{ShEx} and generically by DL (and can therefore be mapped to the \emph{RDF-CV} \cite{BoschEckert2015-2}).
 
 %Half-Klingons, e.g., either have a klingon mother and a human father or a human mother and a klingon father, which can be expressed by ShEx:
 
@@ -794,7 +799,7 @@ The \emph{complex constraint} is generically expressible by \emph{DL}:
 %klingonMother(BElannaTorres,Miral) \\
 %klingonMother(BElannaTorres,JohnTorres)
 %\end{DL}
-%The \emph{complex constraint} is mapped to the \emph{RDF-CV} (see Table \ref{tab:complex-constraints}) and expressed in \emph{DL} as follows:
+%The \emph{complex constraint} is mapped to the \emph{RDF-CV} (see Table \ref{tab:complex-constraints}) and expressed in DL as follows:
 
 %\begin{DL}
 %Half-Klingon $\sqsubseteq$ ($\neg$E $\sqcap$ F) $\sqcup$ (E $\sqcap$ $\neg$F) \\ 
@@ -867,7 +872,7 @@ C $\sqsubseteq$ $\geq$ 1 issn.string $\sqcap$ $\leq$ 1 issn.string , D $\sqsubse
 %\end{table}
 
 %Even though, tools may generate \emph{generic constraints} automatically, this 
-The \emph{DL} statements demonstrate that the \emph{complex constraint} 
+The DL statements demonstrate that the \emph{complex constraint} 
 is composed of many other \emph{complex} (e.g. \emph{minimum and maximum qualified cardinality restrictions}) and \emph{simple constraints} (e.g. constraints on sets).
 As \emph{exact (un)qualified cardinality restrictions (=n)} and \emph{exclusive or (XOR)} are frequently used \emph{complex constraints},
 we propose to simplify them as \emph{simple constraints} in terms of syntactic sugar.
@@ -906,10 +911,10 @@ property & D & title & - & string & = & 1 \\
 %\emph{Complex constraints} can be simplified and therefore formulated as \emph{simple constraints} when using them in terms of syntactic sugar.
 %There are three forms of \emph{OWL RBox axioms}: \emph{role inclusions}, \emph{equivalence} and \emph{disjointness}. 
 %\emph{OWL} provides a variety of other axiom types: \emph{role transitivity}, \emph{symmetry}, \emph{asymmetry}, \emph{reflexivity} and \emph{irreflexivity}. 
-%These axiom types are sometimes considered as basic axiom types in \emph{DL} - using some suggestive notation such as
+%These axiom types are sometimes considered as basic axiom types in DL - using some suggestive notation such as
 %\ms{Trans(ancestorOf)} to express that the role \emph{ancestorOf} is transitive.
 %Such axioms, however, are just syntactic sugar - 
-%all role characteristics can be expressed using the basic features of \emph{DL}.
+%all role characteristics can be expressed using the basic features of DL.
 %
 %The \emph{irreflexive object properties} constraint type (\emph{R-60}) 
 %restricts that no individual is connected by a given object property to itself \cite{Kroetzsch2012}.
@@ -988,7 +993,7 @@ property & Book & isbn$^{-}$ & - & - & functional & - \\
 \emph{Keys}, however, are even more general, i.e., a generalization of \emph{inverse functional properties} \cite{Schneider2009}.
 A key can be a datatype, an object property, or a chain of properties.
 For these generalization purposes, as there are different sorts of keys, and as keys can lead to undecidability, 
-\emph{DL} is extended with a special construct \emph{keyfor} \cite{Lutz2005}.
+DL is extended with a special construct \emph{keyfor} \cite{Lutz2005}.
 When using \emph{keyfor} (\ms{isbn keyfor Book}), 
 the \emph{complex constraint} can be formulated as a \emph{simple constraint} which looks like the following in concrete RDF turtle syntax:
 
@@ -1015,11 +1020,11 @@ the \emph{complex constraint} can be formulated as a \emph{simple constraint} wh
     \textit{rdfcv:contextClass} Book ; \textit{rdfcv:leftProperties} ( isbn ) ; \textit{rdfcv:constrainingElement} "keyfor" ] .
 \end{ex}
 
-\emph{Complex constraints} of frequently used constraint types corresponding to \emph{DL} axioms like 
+\emph{Complex constraints} of frequently used constraint types corresponding to DL axioms like 
 \emph{transitivity}, \emph{symmetry}, \emph{asymmetry}, \emph{reflexivity} and \emph{irreflexivity}
 can also be simplified in the same way, 
-as, although, such axioms can be expressed using basic \emph{DL} features, 
-\emph{DL} axioms like \emph{transitivity} can also be used in terms of syntactic sugar \cite{BoschEckert2015-2}.
+as, although, such axioms can be expressed using basic DL features, 
+DL axioms like \emph{transitivity} can also be used in terms of syntactic sugar \cite{BoschEckert2015-2}.
 %Starfleet officers, e.g., are uniquely identified by their command authorization code (e.g. to activate and cancel auto-destruct sequences).
 %It means that the property \emph{commandAuthorizationCode} is inverse functional - mapped to DL and the \emph{RDF-CV} as follows:
 %
@@ -1173,8 +1178,8 @@ Thus, the idea behind this paper is to satisfy all requirements
 by representing constraints of any constraint type in a generic way using a lightweight vocabulary which consists of only a few terms.
 %To show that constraints can either be represented specifically (\emph{specific constraints}) by constraint languages
 %or generically (\emph{generic constraints}) by \emph{description logics (DL)},
-%we mapped constraint types to \emph{DL} 
-%to determine which \emph{DL} constructs are needed to express them \cite{BoschNolleAcarEckert2015} (Section \ref{sec:vocabulary}).
+%we mapped constraint types to DL 
+%to determine which DL constructs are needed to express them \cite{BoschNolleAcarEckert2015} (Section \ref{sec:vocabulary}).
 
 As there is no standard way to formulate constraints, 
 semantically equivalent \emph{specific constraints} may be represented by a variety of languages - each of them having different syntax and semantics.
