--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -668,9 +668,9 @@ Table \ref{tab:property-constraint-cardinality-restriction} displays how the \em
 
 %The \emph{constraining element} indicates the actual type of constraint like DL concept and role constructors ($\sqsubseteq$, $\equiv$, $\sqcap$, $\sqcup$, $\neg$, $\exists$, $\forall$, $\geq$, $\leq$), (in)equality (=, $\ne$), and further keywords for constraint types whose constraints cannot be expressed in DL (e.g., regular expressions and constraining facets). 
 
-The \emph{constraining element} is an intuitive term which indicates the actual type of constraint. For the majority of the constraint types, there is exactly one constraining element. For the constraint type \emph{property domain (R-25, R-26)} which restricts the domain of properties, e.g., there is only one constraining element with exactly the same identifier \emph{property domain}. For a few constraint types, however, one constraining element is not sufficient to describe all possible constraints of a particular constraint type and therefore multiple constraining elements may be stated for these constraint types. The constraint type \emph{language tag cardinality (R-48, R-49)}, for instance, is used to restrict given data properties to have a minimum, maximum, or exact number of relationships to literals with certain language tags. Thus, three constraining elements are needed in order to be able to express each possible constraint of that comstraint type.
+The \emph{constraining element} is an intuitive term which indicates the actual type of constraint. For the majority of the constraint types, there is exactly one constraining element. For the constraint type \emph{property domain (R-25, R-26)} whose constraints restrict domains of properties, e.g., there is only one constraining element with exactly the same identifier \emph{property domain}. For a few constraint types, however, one constraining element is not sufficient to describe all possible constraints of a particular constraint type and therefore multiple constraining elements may be stated. The constraint type \emph{language tag cardinality (R-48, R-49)}, for instance, is used to restrict data properties to have a minimum, maximum, or exact number of relationships to literals with selected language tags. Thus, three constraining elements are needed to express each possible constraint of that constraint type.
 
-If constraint types are expressible in DL, associated constraining elements are formally based on DL constructs like DL concept and role constructors ($\sqsubseteq$, $\equiv$, $\sqcap$, $\sqcup$, $\neg$, $\exists$, $\forall$, $\geq$, $\leq$) and (in)equality (=, $\ne$). In case, constraint types cannot be expressed in DL such as \emph{data property facets (R-46)} or \emph{literal pattern matching (R-44)}, we reuse widely used terms from SPARQL and the DCMI Metadata Terms like \emph{regex} and \emph{xsd:pattern}. For some constraint types like \emph{cardinality restrictions}, it is more intuitive to reuse the DL terms $\geq$ and $\leq$ as constraining elements instead of, for instance, \emph{minimum qualified cardinality restriction}. We provide a complete list of all constraining elements which can be used to express constraints of any constraint type \cite{BoschNolleAcarEckert2015}. 
+If constraint types are expressible in DL, associated constraining elements are formally based on DL constructs like concept and role constructors ($\sqsubseteq$, $\equiv$, $\sqcap$, $\sqcup$, $\neg$, $\exists$, $\forall$, $\geq$, $\leq$), equality (=), and inequality ($\ne$). In case constraint types cannot be expressed in DL such as \emph{data property facets (R-46)} or \emph{literal pattern matching (R-44)}, we reuse terms from SPARQL (e.g., \emph{regex}) and XML Schema constraining facets (e.g., \emph{minInclusive}). For some constraint types like \emph{cardinality restrictions}, it is more intuitive to reuse the DL terms $\geq$ and $\leq$ as constraining elements instead of, for instance, \emph{minimum qualified cardinality restriction}. We provide a complete list of all constraining elements which can be used to express constraints of any constraint type \cite{BoschNolleAcarEckert2015}. 
 
 In some cases, a constraint is only complete when a \emph{constraining value} is stated in addition to the \emph{constraining element}
 and \emph{simple constraints} may refer to a list of \emph{classes}.
